Fix managing board display for more readability

--- a/static/css/components/recommendations.css
+++ b/static/css/components/recommendations.css
@@ -328,7 +328,6 @@ h4.pci2-recomm-article-h2 .glyphicon {
   min-height: 40px;
   border-radius: 50%;
   background: white;
-  float: left;
   margin-right: 5px;
 
   i {
@@ -346,11 +345,16 @@ h4.pci2-recomm-article-h2 .glyphicon {
   overflow: auto;
 }
 
+.pci-status-title-mini {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
 .pci-status-mini h3 {
   font-weight: bold;
   margin: 0px;
   color: #29abe0;
-  margin-bottom: 8px;
   font-size: 14px;
 }
 
